--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- Header section -->
+    <header>
+      <nav class="navbar">
+        <ul>
+          <li><a href="#Home">Home</a></li>
+          <li><a href="#Feature">Feature</a></li>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Gallery">Gallery</a></li>
+          <li><a href="#Review">Review</a></li>
+          <li><a href="#Contact">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="menu"><i class="fas fa-bars"></i></div>
+    </header>
+
     <!-- jquery link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
