--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     </header>
 
     <!-- Home section -->
-
     <section class="home" id="Home">
       <div class="video_container">
         <video src="images/background.mp4" muted loop autoplay></video>
@@ -60,6 +59,70 @@
 
             <input class="btn" type="submit" value="search" />
           </form>
+        </div>
+      </div>
+    </section>
+
+    <!-- Feature section -->
+    <section class="feature" id="Feature">
+      <h1 class="heading">popular places</h1>
+      <h3 class="title">see the most featured places</h3>
+
+      <div class="card_container">
+        <div class="card">
+          <img src="images/feature1.jpg" alt="" />
+          <div class="info">
+            <h3>tour 1</h3>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <a href="#"><button class="btn">visit now!</button></a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="images/feature2.jpg" alt="" />
+          <div class="info">
+            <h3>tour 1</h3>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half"></i>
+            </div>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <a href="#"><button class="btn">visit now!</button></a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="images/feature3.jpg" alt="" />
+          <div class="info">
+            <h3>tour 1</h3>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <a href="#"><button class="btn">visit now!</button></a>
+          </div>
         </div>
       </div>
     </section>
