--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h1 class="heading">popular places</h1>
       <h3 class="title">see the most featured places</h3>
 
-      <div class="card_container">
+      <div class="card-container">
         <div class="card">
           <img src="images/feature1.jpg" alt="" />
           <div class="info">
@@ -123,6 +123,46 @@
             </p>
             <a href="#"><button class="btn">visit now!</button></a>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About section -->
+
+    <section class="about" id="About">
+      <h1 class="heading">about us</h1>
+      <h3 class="title">explore the world with us</h3>
+
+      <div class="row">
+        <div class="image">
+          <img src="/images/Traveling.svg" alt="" />
+        </div>
+
+        <div class="content">
+          <h3>why choose us</h3>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.Lorem Ipsum is simply dummy text of the printing and
+            typesetting industry.
+          </p>
+          <a href="#"><button class="btn">read more</button></a>
+        </div>
+      </div>
+
+      <div class="box-container">
+        <div class="box">
+          <i class="fas fa-map"></i>
+          <h3>travel guide</h3>
+        </div>
+
+        <div class="box">
+          <i class="fas fa-users"></i>
+          <h3>24 x 7 service</h3>
+        </div>
+
+        <div class="box">
+          <i class="fas fa-hotel"></i>
+          <h3>hotel booking</h3>
         </div>
       </div>
     </section>
