gallery section & css bugs fixed

--- a/index.html
+++ b/index.html
@@ -167,6 +167,90 @@
       </div>
     </section>
 
+    <!-- Gallery section -->
+
+    <section class="gallery" id="Gallery">
+      <h1 class="heading">our gallery</h1>
+      <h3 class="title">explore the most visited places</h3>
+
+      <div class="box-container">
+        <div class="box">
+          <div class="image">
+            <img src="/images/gallery1.jpg" alt="" />
+          </div>
+          <div class="content">
+            <h3>tour 1</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.Lorem Ipsum is simply dummy text of the printing and
+              typesetting industry.
+            </p>
+            <a href="#"><button class="btn">explore</button></a>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="/images/gallery2.jpg" alt="" />
+          </div>
+          <div class="content">
+            <h3>tour 1</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.Lorem Ipsum is simply dummy text of the printing and
+              typesetting industry.
+            </p>
+            <a href="#"><button class="btn">explore</button></a>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="/images/gallery3.jpg" alt="" />
+          </div>
+          <div class="content">
+            <h3>tour 1</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.Lorem Ipsum is simply dummy text of the printing and
+              typesetting industry.
+            </p>
+            <a href="#"><button class="btn">explore</button></a>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="/images/gallery4.jpg" alt="" />
+          </div>
+          <div class="content">
+            <h3>tour 1</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.Lorem Ipsum is simply dummy text of the printing and
+              typesetting industry.
+            </p>
+            <a href="#"><button class="btn">explore</button></a>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="/images/gallery5.jpg" alt="" />
+          </div>
+          <div class="content">
+            <h3>tour 1</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.Lorem Ipsum is simply dummy text of the printing and
+              typesetting industry.
+            </p>
+            <a href="#"><button class="btn">explore</button></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- jquery link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
