--- a/index.html
+++ b/index.html
@@ -251,6 +251,62 @@
       </div>
     </section>
 
+    <!-- Review section -->
+    <section class="review" id="Review">
+      <h1 class="heading">customer review</h1>
+      <h3 class="title">what people says about us</h3>
+
+      <div class="box-container">
+        <div class="box">
+          <i class="fas fa-quote-left"></i>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.Lorem Ipsum is simply dummy text of the printing and
+            typesetting industry.
+          </p>
+          <div class="user">
+            <img src="images/user1.jpg" alt="" />
+            <div class="info">
+              <h3>someones's name</h3>
+              <span>jan 5, 2021</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="box">
+          <i class="fas fa-quote-left"></i>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.Lorem Ipsum is simply dummy text of the printing and
+            typesetting industry.
+          </p>
+          <div class="user">
+            <img src="images/user2.jpg" alt="" />
+            <div class="info">
+              <h3>someones's name</h3>
+              <span>jan 5, 2021</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="box">
+          <i class="fas fa-quote-left"></i>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.Lorem Ipsum is simply dummy text of the printing and
+            typesetting industry.
+          </p>
+          <div class="user">
+            <img src="images/user3.jpg" alt="" />
+            <div class="info">
+              <h3>someones's name</h3>
+              <span>jan 5, 2021</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- jquery link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
