--- a/index.html
+++ b/index.html
@@ -307,6 +307,19 @@
       </div>
     </section>
 
+    <!-- newsletter section -->
+    <section class="newsletter">
+      <div class="box">
+        <h1>sign up for discount</h1>
+        <h3>get in touch with us and get latest updates</h3>
+
+        <form action="">
+          <input type="email" placeholder="enter your email" />
+          <input type="submit" class="btn" value="send" />
+        </form>
+      </div>
+    </section>
+
     <!-- jquery link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
