--- a/index.html
+++ b/index.html
@@ -320,6 +320,34 @@
       </div>
     </section>
 
+    <!-- contact -->
+    <section class="contact" id="Contact">
+      <h1 class="heading">contact us</h1>
+      <h3 class="title">book your ticket now</h3>
+
+      <form action="">
+        <div class="inputBox">
+          <input type="text" placeholder="first name" />
+          <input type="text" placeholder="last name" />
+        </div>
+
+        <div class="inputBox">
+          <input type="email" placeholder="email" />
+          <input type="number" placeholder="phone" />
+        </div>
+
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="message"
+        ></textarea>
+
+        <input type="submit" value="message" class="btn" />
+      </form>
+    </section>
+
     <!-- jquery link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
