--- a/index.html
+++ b/index.html
@@ -348,6 +348,40 @@
       </form>
     </section>
 
+    <!-- footer section -->
+    <section class="footer">
+      <div class="box">
+        <h3>explore</h3>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry.Lorem Ipsum is simply dummy text of the printing and
+          typesetting industry.
+        </p>
+      </div>
+
+      <div class="box">
+        <h3>share</h3>
+        <a href="#">facebook</a>
+        <a href="#">twitter</a>
+        <a href="#">instagram</a>
+        <a href="#">github</a>
+      </div>
+
+      <div class="box">
+        <h3>links</h3>
+        <a href="#">home</a>
+        <a href="#">features</a>
+        <a href="#">about</a>
+        <a href="#">gallery</a>
+        <a href="#">review</a>
+        <a href="#">contact</a>
+      </div>
+
+      <h1 class="credit">
+        created by <span>Sanjula Dulshan</span> | all rights reserved
+      </h1>
+    </section>
+
     <!-- jquery link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
