--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="content">
-        <h1>explore.</h1>
+        <h1>exploree.</h1>
         <h3>its time to travel</h3>
 
         <div class="form_container">
@@ -135,7 +135,7 @@
 
       <div class="row">
         <div class="image">
-          <img src="/images/Traveling.svg" alt="" />
+          <img src="images/Traveling.svg" alt="" />
         </div>
 
         <div class="content">
@@ -176,7 +176,7 @@
       <div class="box-container">
         <div class="box">
           <div class="image">
-            <img src="/images/gallery1.jpg" alt="" />
+            <img src="images/gallery1.jpg" alt="" />
           </div>
           <div class="content">
             <h3>tour 1</h3>
@@ -191,7 +191,7 @@
 
         <div class="box">
           <div class="image">
-            <img src="/images/gallery2.jpg" alt="" />
+            <img src="images/gallery2.jpg" alt="" />
           </div>
           <div class="content">
             <h3>tour 1</h3>
@@ -206,7 +206,7 @@
 
         <div class="box">
           <div class="image">
-            <img src="/images/gallery3.jpg" alt="" />
+            <img src="images/gallery3.jpg" alt="" />
           </div>
           <div class="content">
             <h3>tour 1</h3>
@@ -221,7 +221,7 @@
 
         <div class="box">
           <div class="image">
-            <img src="/images/gallery4.jpg" alt="" />
+            <img src="images/gallery4.jpg" alt="" />
           </div>
           <div class="content">
             <h3>tour 1</h3>
@@ -236,7 +236,7 @@
 
         <div class="box">
           <div class="image">
-            <img src="/images/gallery5.jpg" alt="" />
+            <img src="images/gallery5.jpg" alt="" />
           </div>
           <div class="content">
             <h3>tour 1</h3>
