fixed mobile view bugs

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="content">
-        <h1>exploree.</h1>
+        <h1>explore.</h1>
         <h3>its time to travel</h3>
 
         <div class="form_container">
