mobile view bugs fixed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="form_container">
           <form action="">
-            <h3>Search your destination</h3>
+            <h3>Search your destination.</h3>
 
             <span>location</span>
             <input type="text" placeholder="Place you want to visit" />
